add active panel display/switching to main.html and stub out sections of website

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -6,9 +6,11 @@
       </a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Blog</a></li>
-      <li><a href="">About</a></li>
-      <li><a href="">Contact</a></li>
+      <!-- use directives instead of functions bound to mainCtrl? -->
+      <li><a href="#" ng-click="main.changePanel('blog')">Blog</a></li>
+      <li><a href="#" ng-click="main.changePanel('about')">About</a></li>
+      <li><a href="#" ng-click="main.changePanel('contact')">Contact</a></li>
+
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects <span class="caret"></span></a>
       </li>
