--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,3 +1,11 @@
-<div class="container-fluid">
+<div class="container-fluid" ng-controller="MainCtrl as main">
+
   <div ng-include="'app/components/navbar/navbar.html'"></div>
+
+  <div ng-switch on="main.activePanel">
+    <about ng-switch-when='about'></about>
+    <contact ng-switch-when='contact'></contact>
+    <blog ng-switch-default='blog'></blog>
+  </div>
+
 </div>
