--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" ui-sref="app.blog.list">
         Siyan Beverly
       </a>
     </div>
     <ul class="nav navbar-nav navbar-right">
       <!-- use directives instead of functions bound to mainCtrl? -->
-      <li><a href="#" ng-click="main.changePanel('blog')">Blog</a></li>
-      <li><a href="#" ng-click="main.changePanel('about')">About</a></li>
-      <li><a href="#" ng-click="main.changePanel('contact')">Contact</a></li>
+      <li><a href="#" ui-sref="app.blog.list">Blog</a></li>
+      <li><a href="#" ui-sref="app.about">About</a></li>
+      <li><a href="#" ui-sref="app.contact">Contact</a></li>
 
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects <span class="caret"></span></a>
