add css styling to blog and animations for view transitions

--- a/src/app/blog/blog.css
+++ b/src/app/blog/blog.css
@@ -1,13 +1,10 @@
 .post-stub {
 	cursor: pointer;
+	font-size: 19px;
 }
 
 .post-header {
 	vertical-align: bottom;
-}
-
-.post-text {
-
 }
 
 .h3 {
