--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,14 +1,26 @@
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+body {
+	background-color: snow ;
+	font-family: sans-serif;
+	font-weight: lighter;
+	font-size: 140%;
 }
 
-.thumbnail {
-  height: 200px;
+.navbar-default {
+	background-color: inherit;
+	border: none;
 }
 
-.thumbnail img.pull-right {
-  width: 50px;
+#main-content {
+	margin-top: 7vh;
 }
+
+.link {
+	cursor: pointer;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+.ng-enter { animation: fadein 0.2s both ease-in; z-index: 8888; }
