--- a/src/app/components/blog/blog.html
+++ b/src/app/components/blog/blog.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="BlogCtrl as blog" ng-init="blog.pullBlogPosts()">
+<div class="container" ng-controller="BlogCtrl as blog" ng-init="blog.getPosts()">
 	<div class="row">
 		<div class="col-md-10 col-md-offset-1">
 			<div ui-view="content"></div>
