add navbar styling for active nav links

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -18,6 +18,10 @@ body {
 	cursor: pointer;
 }
 
+.active-nav {
+	text-decoration: underline;
+}
+
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
