--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -6,9 +6,9 @@
       </a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#" ui-sref="app.blog.list">Blog</a></li>
-      <li><a href="#" ui-sref="app.about">About</a></li>
-      <li><a href="#" ui-sref="app.contact">Contact</a></li>
+      <li ui-sref-active="active-nav"><a ui-sref="app.blog.list">Blog</a></li>
+      <li ui-sref-active="active-nav"><a ui-sref="app.about">About</a></li>
+      <li ui-sref-active="active-nav"><a ui-sref="app.contact">Contact</a></li>
     </ul>
   </nav>
 </div>
