--- a/src/app/components/blog/blog.list.html
+++ b/src/app/components/blog/blog.list.html
@@ -4,7 +4,9 @@
 			<span>{{ post.title }}</span>
 			<span style="float:right;"><small>{{ post.created_at | date }}</small></span>
 			
-			<div style="margin-top: 1.5vh;" class="text-justify"> <small><small> {{ post.text | limitTo: 150 }} </small></small></div>
+			<div style="margin-top: 1.5vh;" class="text-justify"> 
+				<small><small> {{ post.text | limitTo: 150 }} </small></small>
+			</div>
 		</div>
 		<div class="row"><hr></div>
 	</div>
