add nav divider and social links

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -5,6 +5,12 @@ body {
 	font-size: 140%;
 }
 
+.navbar-header {
+	height: 50px;
+	margin: 0 9px;
+	border-right: 1px solid black;
+}
+
 .navbar-default {
 	background-color: inherit;
 	border: none;
