--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -5,6 +5,25 @@
         Siyan Beverly
       </a>
     </div>
+
+    <ul class="nav navbar-nav navbar-left">
+      <li>
+        <a href="https://twitter.com/sxanatos" target="_blank">
+          <i class="fa fa-twitter fa-lg"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/sbeverly" target="_blank">
+          <i class="fa fa-github-alt fa-lg"></i>
+        </a>
+      </li>
+      <li>
+        <a href="" target="_blank">
+          <i class="fa fa-linkedin fa-lg"></i>
+        </a>
+      </li>
+    </ul>
+
     <ul class="nav navbar-nav navbar-right">
       <li ui-sref-active="active-nav"><a ui-sref="app.about">About</a></li>
       <li ui-sref-active="active-nav"><a ui-sref="app.blog.list">Blog</a></li>
