--- a/src/app/components/about/about.html
+++ b/src/app/components/about/about.html
@@ -2,17 +2,17 @@
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 
+			<div class="row">
+				<div class="about-me-profile-pic col-xs-6 col-xs-offset-3">
+					<div>
+						<img src="assets/images/profile.jpg" class="img-thumbnail img-responsive">
+					</div>
+				</div>
+			</div>
+
 			<div class="col-xs-12 about-me-text">
 				<div>
-					<p>Welcome! My name is Siyan and I am a web developer from Washington, DC.  I recently switched careers from the field of law to better utilize my creativity as well as my passion for technology, coding and entrepreneurship.  This is me:</p>
-
-					<div class="row">
-						<div class="about-me-profile-pic col-xs-6 col-xs-offset-3">
-							<div>
-								<img src="assets/images/profile.jpg" class="img-thumbnail img-responsive">
-							</div>
-						</div>
-					</div>
+					<p>Welcome! My name is Siyan and I am a web developer from Washington, DC who recently switched careers from the field of law to better utilize my creativity, as well as my passion for technology, coding and entrepreneurship.</p>
 
 					<p>I have spent the last year building data intensive applications for a high-growth data analytics startup in Philadelphia, PA called RJ Metrics where I have worked with many different frameworks, databases and programming languages on a daily basis.</p>
 					
