tweak top margin

--- a/src/app/components/blog/blog.list.html
+++ b/src/app/components/blog/blog.list.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="margin-bottom: 10vh;">
+<div class="container-fluid">
 	<div ng-repeat="post in blog.posts">
 		<div class="col-xs-12 col-md-8 col-md-offset-2">
 			<div class="row post-stub" ui-sref="app.blog.post({id: post.id})">
