--- a/src/app/components/about/about.css
+++ b/src/app/components/about/about.css
@@ -1,13 +1,12 @@
 .about-me-text {
-	font-size: 115%;
+	font-size: 110%;
+	margin-top: 4vh;
 	margin-bottom: 5vh;
+	vertical-align: middle;
 }
 
 .about-me-profile-pic {
-	/*margin-top: 5vh;*/
-	margin-bottom: 5vh;
-}
-
-.about-container {
+	margin-top: 4vh;
 	margin-bottom: 2vh;
+	vertical-align: middle;
 }
