--- a/src/app/components/about/about.html
+++ b/src/app/components/about/about.html
@@ -1,24 +1,25 @@
 <div class="container-fluid about-container">
 	<div class="row">
-		<div class="col-md-8 col-md-offset-2">
+		<div class="col-xs-8 col-xs-offset-2">
 
 			<div class="row">
+				
 				<div class="about-me-profile-pic col-xs-6 col-xs-offset-3">
-					<div>
-						<img src="assets/images/profile.jpg" class="img-thumbnail img-responsive">
+					<div class="col-xs-12">
+						<img src="assets/images/profile.jpg" class="img-thumbnail">
 					</div>
 				</div>
-			</div>
+				
+				<div class="col-xs-12 about-me-text">
+					<div>
+						<p>Welcome! My name is Siyan and I am a web developer from Washington, DC who recently switched careers from the field of law to better utilize my creativity, as well as my passion for technology, coding and entrepreneurship.</p>
 
-			<div class="col-xs-12 about-me-text">
-				<div>
-					<p>Welcome! My name is Siyan and I am a web developer from Washington, DC who recently switched careers from the field of law to better utilize my creativity, as well as my passion for technology, coding and entrepreneurship.</p>
+						<p>I have spent the last year building data intensive applications for a high-growth data analytics startup in Philadelphia, PA called RJ Metrics where I have worked with many different frameworks, databases and programming languages on a daily basis.</p>
+						
+						<p>I like designing code that is modular and extensible in various languages and understand how to learn new ones efficiently.  I am very comfortable in collaborative environments where teamwork, pair coding and communication are critical but I am also capable of working independently.</p>
 
-					<p>I have spent the last year building data intensive applications for a high-growth data analytics startup in Philadelphia, PA called RJ Metrics where I have worked with many different frameworks, databases and programming languages on a daily basis.</p>
-					
-					<p>I like designing code that is modular and extensible in various languages and understand how to learn new ones efficiently.  I am very comfortable in collaborative environments where teamwork, pair coding and communication are critical but I am also capable of working independently.</p>
-
-					<p>Currently, I enjoy coding in Angular.js using a Rails backend as an API, though I am increasingly tempted by the Node.js backend I use at work so frequently...</p>
+						<p>Currently, I enjoy coding in Angular.js using a Rails backend as an API, though I am increasingly tempted by the Node.js backend I use at work so frequently...</p>
+					</div>
 				</div>
 			</div>
 		</div>
