add linked in link

--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -18,7 +18,7 @@
           </a>
         </li>
         <li>
-          <a href="" target="_blank">
+          <a href="https://www.linkedin.com/in/siyanbeverly" target="_blank">
             <i class="fa fa-linkedin fa-lg"></i>
           </a>
         </li>
