change font to Oxygen

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,6 +1,6 @@
 body {
-	background-color: snow ;
-	font-family: sans-serif;
+	background-color: snow;
+	font-family: 'Oxygen', sans-serif;
 	font-weight: lighter;
 	font-size: 140%;
 }
