tweak font size and spacing, point to blog service to prod server

--- a/src/app/components/about/about.html
+++ b/src/app/components/about/about.html
@@ -10,7 +10,7 @@
 					</div>
 				</div>
 				
-				<div class="col-xs-12 about-me-text">
+				<div class="col-xs-12 about-me-text text-justify">
 					<div>
 						<p>Welcome! My name is Siyan and I am a web developer from Washington, DC who recently switched careers from the field of law to better utilize my creativity, as well as my passion for technology, coding and entrepreneurship.</p>
 
