--- a/src/app/components/about/about.css
+++ b/src/app/components/about/about.css
@@ -1,5 +1,6 @@
 .about-me-text {
-	font-size: 110%;
+	font-size: 115%;
+	line-height: 170%;
 	margin-top: 4vh;
 	margin-bottom: 5vh;
 	vertical-align: middle;
