--- a/src/app/components/blog/blog.css
+++ b/src/app/components/blog/blog.css
@@ -10,3 +10,10 @@
 .h3 {
 	vertical-align: bottom;
 }
+
+.post-text {
+	font-family: sans-serif;
+	font-weight: 300;
+	font-size: 120%;
+	line-height: 170%;
+}
