--- a/src/app/components/about/about.html
+++ b/src/app/components/about/about.html
@@ -6,7 +6,7 @@
 				
 				<div class="about-me-profile-pic col-xs-6 col-xs-offset-3">
 					<div class="col-xs-12">
-						<img src="assets/images/profile.jpg" class="img-thumbnail">
+						<img src="assets/images/boat_pic.jpg" class="img-thumbnail">
 					</div>
 				</div>
 				
