add projects page, nav link and controller with access to github commits

--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -27,6 +27,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li ui-sref-active="active-nav"><a ui-sref="app.about">About</a></li>
         <li ui-sref-active="active-nav"><a ui-sref="app.blog.list">Blog</a></li>
+        <li ui-sref-active="active-nav"><a ui-sref="app.projects">Projects</a></li>
       </ul>
   </div>
 </nav>
