--- a/src/app/components/projects/projects.html
+++ b/src/app/components/projects/projects.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" ng-controller="ProjectsCtrl as projects" ng-init="projects.loadMyCommits()">
 	<div class="row" style="margin-top: 20px;">
-		<div class="col-md-5" id="github-commits">
+		<div class="col-sm-4" id="github-commits">
 			<timeline>
 				<timeline-event ng-repeat="commit in projects.myCommits">
 					<timeline-badge class="info">
@@ -10,20 +10,19 @@
 						<timeline-heading>
 				    		<h4>
 				    			{{ commit.repoName }}
-						    	<span style="float:right;">
-						    		<small> {{ commit.createdAt | date }} </small>
-						    	</span>
 				    		</h4>
 				   		</timeline-heading>
 				    	<p>{{ commit.message }}</p>
-				    	<small><a href="{{ commit.url }}" target="_blank">view commit</a></small>
+					<timeline-heading>
+						<p><small> on {{ commit.createdAt | date }} - <a href="{{ commit.url }}" target="_blank">view commit</a> </small></p>
+					</timeline-heading>
 					</timeline-panel>
 				</timeline-event>
 			</timeline>
 		</div>
 
 
-		<div class="col-md-6" id="project-detail">
+		<div class="col-sm-7" id="project-detail">
 			<dt>Project:</dt> <dd> {{ projects.selectedProject.title }} </dd>
 			<br>
 			<dt>Description:</dt>
